<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.UserDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/darker_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgUserPhoto"
                android:layout_width="125dp"
                android:layout_height="125dp"
                tools:src="@tools:sample/avatars"
                app:civ_border_width="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                app:civ_border_color="@color/white" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="26sp"
                android:textColor="@color/white"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white"
                tools:text="@string/username" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/tvFollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/followers"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="18dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/tvRepositories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/repositories"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="18dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/tvFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/following"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalGuideline"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@+id/profile"
            app:layout_constraintBottom_toBottomOf="@+id/profile"
            app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
            app:layout_constraintEnd_toEndOf="@+id/verticalGuideline"
            tools:visibility="visible" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/tab_layout" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="385dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>